--- a/index.html
+++ b/index.html
@@ -2,150 +2,257 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Help & FAQs - Mr Smile Projects</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MR SMILE AI Chatbot</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.3/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #000;
-      color: #0ff;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #00ffcc;
+      font-family: 'Courier New', monospace;
     }
-
-    header {
-      text-align: center;
-      padding: 2rem;
-      background: #001f2f;
-      box-shadow: 0 0 15px #0ff;
+    .glass {
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      text-shadow: 0 0 10px #0ff;
+    .dot {
+      animation: blink 1s infinite;
     }
+    .dot:nth-child(2) { animation-delay: 0.2s; }
+    .dot:nth-child(3) { animation-delay: 0.4s; }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
+    @keyframes blink {
+      0% { opacity: 0; }
+      50% { opacity: 1; }
+      100% { opacity: 0; }
     }
-
-    h2 {
-      border-bottom: 2px solid #0ff;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
-      font-size: 1.6rem;
-      text-shadow: 0 0 5px #0ff;
-    }
-
-    .faq-item {
-      margin-bottom: 1.5rem;
-      border: 1px solid #0ff5;
-      border-radius: 10px;
-      padding: 1rem;
-      background: #0f0f0f;
-      box-shadow: 0 0 10px #0ff3;
-    }
-
-    .faq-item summary {
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 1.1rem;
-    }
-
-    .faq-item p {
-      margin-top: 0.8rem;
-      line-height: 1.6;
-      color: #ccc;
-    }
-
-    .contact {
-      text-align: center;
-      margin-top: 2rem;
-      padding: 1rem;
-      background: #001f2f;
-      color: #0ff;
-      box-shadow: 0 0 15px #0ff3;
-    }
-
-    a {
-      color: #0ff;
-      text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
+    .timestamp {
+      font-size: 0.65rem;
+      color: #66ffcc;
+      margin-left: 0.5rem;
+      opacity: 0.7;
+      align-self: flex-end;
     }
   </style>
 </head>
-<body>
+<body class="flex flex-col min-h-screen">
 
-  <header>
-    <h1>📘 Mr Smile Help & FAQs</h1>
-    <p>Your questions answered. Need help? Start here.</p>
+  <!-- Logo Title -->
+  <header class="text-center py-6">
+    <h1 class="text-4xl font-bold text-green-400 drop-shadow-lg">MR SMILE AI CHATBOT</h1>
+    <p class="text-sm text-green-300 italic">Your mobile AI software engineer</p>
   </header>
 
-  <div class="container">
-    <h2>❓ Frequently Asked Questions</h2>
-
-    <details class="faq-item">
-      <summary>How do I download Crush Lord V4 scripts?</summary>
-      <p>Click on the "Buy Scripts" section, select the script type (Encrypted or Non-Encrypted), and follow the payment instructions. Once paid, a download link will be provided.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>What are Encrypted and Non-Encrypted scripts?</summary>
-      <p>Encrypted scripts are protected from editing to prevent tampering. Non-Encrypted scripts are editable and useful for developers who want to customize.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>How do I contact Mr Smile support?</summary>
-      <p>You can reach out via WhatsApp: <a href="https://wa.me/254107065646" target="_blank">254107065646</a> or email us at: <a href="mailto:jaydenofficial76@gmail.com">jaydenofficial76@gmail.com</a></p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Where can I watch tutorials?</summary>
-      <p>Visit the <a href="tutorials-demo.html">Tutorials Demo</a> page. We regularly upload videos on how to install, edit, and run your scripts.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Do you offer refunds?</summary>
-      <p>All sales are final. We do not offer refunds once scripts or tools have been delivered.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Why is my bot crashing?</summary>
-      <p>Make sure your hosting panel supports Node.js, the script is up-to-date, and your API keys or credentials are valid. Check logs for errors.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Can I resell your scripts?</summary>
-      <p>Unauthorized reselling is strictly prohibited. If you want to become a reseller, contact Mr Smile for permission and licensing.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>How often do you update your scripts?</summary>
-      <p>Updates are released monthly or whenever there is a major feature or fix needed. Stay updated via our YouTube or support group.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Do I need coding skills to use your bots?</summary>
-      <p>No. Basic instructions are provided. However, having some knowledge in HTML, JavaScript, or Node.js is a plus for advanced customization.</p>
-    </details>
-
-    <details class="faq-item">
-      <summary>Where can I find the change log?</summary>
-      <p>The changelog for all updates is included in the README file of each script package. You can also ask support for the latest update notes.</p>
-    </details>
+  <!-- Chat Section -->
+  <div class="flex-grow container mx-auto px-4">
+    <div class="h-full w-full max-w-2xl mx-auto">
+      <div id="chatbox" class="flex flex-col items-start overflow-y-auto h-[500px] p-2 rounded glass space-y-2"></div>
+      <div id="typingIndicator" class="hidden text-green-400 text-sm italic mt-2 animate-pulse text-center">
+        AI is typing<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span>
+      </div>
+    </div>
   </div>
 
-  <div class="contact">
-    Need more help? <a href="https://wa.me/254107065646">Chat with support</a> or email: <a href="mailto:jaydenofficial76@gmail.com">jaydenofficial76@gmail.com</a>
+  <!-- Input Section -->
+  <div class="sticky bottom-0 w-full bg-opacity-50 py-4">
+    <div class="flex justify-center">
+      <div class="px-2 w-full max-w-2xl">
+        <div class="flex flex-col gap-2">
+          <input
+            class="glass text-white placeholder-gray-400 p-3 rounded focus:outline-none"
+            id="messageInput"
+            type="text"
+            placeholder="Type your message"
+          />
+          <div class="flex justify-between space-x-2">
+            <button
+              class="glass hover:bg-red-600 text-white font-bold py-2 px-4 rounded w-full sm:w-auto"
+              id="clearButton"
+            >
+              Clear Chat
+            </button>
+            <button
+              class="glass hover:bg-green-600 text-white font-bold py-2 px-4 rounded w-full sm:w-auto"
+              id="sendButton"
+            >
+              Ask AI!
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
+  <!-- Optional Sounds -->
+  <audio id="sendSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
+  <audio id="receiveSound" src="https://www.soundjay.com/button/beep-08b.wav" preload="auto"></audio>
+
+  <!-- Script -->
+  <script>
+    const chatbox = document.getElementById("chatbox");
+    const messageInput = document.getElementById("messageInput");
+    const sendButton = document.getElementById("sendButton");
+    const clearButton = document.getElementById("clearButton");
+    const typingIndicator = document.getElementById("typingIndicator");
+    const sendSound = document.getElementById("sendSound");
+    const receiveSound = document.getElementById("receiveSound");
+    const chatId = crypto.randomUUID();
+
+    let websocket = null;
+    let receiving = false;
+
+    const systemPrompt = "Y'ello, I am CHARLES Foundation your AI developer for MOBILE AI and I am a software engineer.";
+
+    // Save and restore chat from localStorage under this key
+    const STORAGE_KEY = "ceo-ai-chat-history";
+
+    // Format current time as HH:MM
+    function getCurrentTime() {
+      const d = new Date();
+      return d.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+    }
+
+    // Create a chat message element with text, alignment, and timestamp
+    function createMessageElement(text, alignment, time) {
+      const messageWrapper = document.createElement("div");
+      messageWrapper.className = `flex ${alignment === "left" ? "justify-start" : "justify-end"}`;
+
+      const messageElement = document.createElement("div");
+      messageElement.className = `inline-block p-3 rounded-lg text-sm max-w-[75%] whitespace-pre-line ${
+        alignment === "left"
+          ? "bg-black bg-opacity-30 text-green-300"
+          : "bg-green-600 text-white"
+      }`;
+      messageElement.textContent = text;
+
+      const timestamp = document.createElement("span");
+      timestamp.className = "timestamp";
+      timestamp.textContent = time || getCurrentTime();
+
+      messageWrapper.appendChild(messageElement);
+      messageWrapper.appendChild(timestamp);
+      return messageWrapper;
+    }
+
+    // Save chat history to localStorage
+    function saveChatHistory() {
+      const messages = [];
+      chatbox.querySelectorAll("div.flex").forEach(msgDiv => {
+        const textDiv = msgDiv.querySelector("div");
+        const timeSpan = msgDiv.querySelector("span.timestamp");
+        messages.push({
+          text: textDiv.textContent,
+          alignment: textDiv.classList.contains("bg-green-600") ? "right" : "left",
+          time: timeSpan.textContent
+        });
+      });
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(messages));
+    }
+
+    // Load chat history from localStorage
+    function loadChatHistory() {
+      const saved = localStorage.getItem(STORAGE_KEY);
+      if (!saved) return;
+      try {
+        const messages = JSON.parse(saved);
+        messages.forEach(({ text, alignment, time }) => {
+          const msgElem = createMessageElement(text, alignment, time);
+          chatbox.appendChild(msgElem);
+        });
+        chatbox.scrollTop = chatbox.scrollHeight;
+      } catch (e) {
+        console.warn("Failed to load chat history:", e);
+      }
+    }
+
+    function connectWebSocket(message, initChat) {
+      receiving = true;
+      sendButton.textContent = "Cancel";
+      typingIndicator.classList.remove("hidden");
+
+      websocket = new WebSocket("wss://backend.buildpicoapps.com/api/chatbot/chat");
+
+      websocket.addEventListener("open", () => {
+        websocket.send(JSON.stringify({
+          chatId,
+          appId: "word-almost",
+          systemPrompt,
+          message: initChat ? "A very short welcome message from the CHARLESKE AI" : message,
+        }));
+      });
+
+      const messageElement = createMessageElement("", "left");
+      chatbox.appendChild(messageElement);
+      saveChatHistory();
+
+      websocket.onmessage = (event) => {
+        receiveSound.play();
+
+        // Append incoming message data as it arrives (streaming)
+        messageElement.querySelector("div").textContent += event.data;
+
+        chatbox.scrollTop = chatbox.scrollHeight;
+      };
+
+      websocket.onclose = (event) => {
+        typingIndicator.classList.add("hidden");
+        if (event.code === 1000) {
+          receiving = false;
+          sendButton.textContent = "Ask AI!";
+
+          // After complete message received, save updated chat
+          saveChatHistory();
+        } else {
+          messageElement.querySelector("div").textContent += " [Connection Error. Please refresh.]";
+          receiving = false;
+          sendButton.textContent = "Ask AI!";
+          saveChatHistory();
+        }
+      };
+    }
+
+    function createWelcomeMessage() {
+      connectWebSocket("", true);
+    }
+
+    sendButton.addEventListener("click", () => {
+      if (!receiving && messageInput.value.trim() !== "") {
+        sendSound.play();
+        const messageText = messageInput.value.trim();
+        messageInput.value = "";
+        const messageElement = createMessageElement(messageText, "right");
+        chatbox.appendChild(messageElement);
+        chatbox.scrollTop = chatbox.scrollHeight;
+        saveChatHistory();
+
+        connectWebSocket(messageText, false);
+      } else if (receiving && websocket) {
+        websocket.close(1000);
+        receiving = false;
+        sendButton.textContent = "Ask AI!";
+      }
+    });
+
+    messageInput.addEventListener("keydown", (event) => {
+      if (event.key === "Enter" && !receiving && messageInput.value.trim() !== "") {
+        event.preventDefault();
+        sendButton.click();
+      }
+    });
+
+    clearButton.addEventListener("click", () => {
+      chatbox.innerHTML = "";
+      localStorage.removeItem(STORAGE_KEY);
+    });
+
+    // Load chat history on page load
+    loadChatHistory();
+
+    // If no history, create welcome message
+    if (chatbox.children.length === 0) {
+      createWelcomeMessage();
+    }
+  </script>
 </body>
 </html>
