--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     let websocket = null;
     let receiving = false;
 
-    const systemPrompt = "Y'ello, I am CHARLES Foundation your AI developer for MOBILE AI and I am a software engineer.";
+    const systemPrompt = "Y'ello, I am Mr Smile Foundation your AI developer for MOBILE AI and I am a software engineer.";
 
     // Save and restore chat from localStorage under this key
     const STORAGE_KEY = "ceo-ai-chat-history";
@@ -178,7 +178,7 @@
           chatId,
           appId: "word-almost",
           systemPrompt,
-          message: initChat ? "A very short welcome message from the CHARLESKE AI" : message,
+          message: initChat ? "A very short welcome message from the MR SMILE AI" : message,
         }));
       });
 
